# desktop-buddy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
bridge/: Cargo.toml  build.rs  stage-firmware.sh
bridge/assets/: app-icon.icns  state_map.json
bridge/assets/agents/: antigravity-cli.json  claude-code.json  codebuddy.json  codex.json  copilot-cli.json  cursor-agent.json  gemini-cli.json  hermes.json  kimi-cli.json  kiro-cli.json  openclaw.json  opencode.json  pi.json  qwen-code.json
bridge/assets/plugins/hermes/: __init__.py  plugin.yaml
bridge/assets/plugins/openclaw/: index.js  openclaw.plugin.json  package.json
bridge/assets/plugins/opencode/: index.mjs  package.json
bridge/assets/plugins/pi/: index.ts
bridge/src/: agent.rs  ble.rs  client.rs  daemon.rs  hook.rs  ingest.rs  ipc.rs  lib.rs  main.rs  ota.rs  packs.rs  power.rs  protocol.rs  selfupdate.rs  setup.rs  state.rs  update.rs  widget.rs  widget_bundled.rs
packaging/: RELEASE_VERIFICATION.md
packaging/linux/: make-appimage.sh
packaging/macos/: NOTARIZE.md  make-app.sh
packaging/windows/: installer.iss
